--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,6 +4,13 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
+variables:
+  ARM_ACCESS_KEY: '$(ARM_ACCESS_KEY)'
+  ARM_CLIENT_ID: '$(ARM_CLIENT_ID)'
+  ARM_CLIENT_SECRET: '$(ARM_CLIENT_SECRET)'
+  ARM_SUBSCRIPTION_ID: '$(ARM_SUBSCRIPTION_ID)'
+  ARM_TENANT_ID: '$(ARM_TENANT_ID)'
+
 steps:
 - script: | 
     curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
@@ -14,3 +21,16 @@ steps:
 - script: |
     terraform version
   displayName: 'Check Terraform Version'
+  
+- script: |
+    ls -lah
+  displayName: 'list current repo'
+
+- script: |
+    cd terraform/environments/dev
+  displayName: 'Change directory'
+  
+- script: |
+    terraform init
+    terraform plan
+  displayName: 'Terraform init & plan'
