--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,12 +4,12 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
-variables:
-  ARM_ACCESS_KEY: '$(ARM_ACCESS_KEY)'
-  ARM_CLIENT_ID: '$(ARM_CLIENT_ID)'
-  ARM_CLIENT_SECRET: '$(ARM_CLIENT_SECRET)'
-  ARM_SUBSCRIPTION_ID: '$(ARM_SUBSCRIPTION_ID)'
-  ARM_TENANT_ID: '$(ARM_TENANT_ID)'
+#variables:
+#  ARM_ACCESS_KEY: '$(ARM_ACCESS_KEY)'
+#  ARM_CLIENT_ID: '$(ARM_CLIENT_ID)'
+#  ARM_CLIENT_SECRET: '$(ARM_CLIENT_SECRET)'
+#  ARM_SUBSCRIPTION_ID: '$(ARM_SUBSCRIPTION_ID)'
+#  ARM_TENANT_ID: '$(ARM_TENANT_ID)'
 
 steps:
 - script: | 
