--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,13 +36,13 @@ stages:
 - stage: AccessVariable
   displayName: Access variable from variable group
   jobs:
-  - Install_Terraform:
+  - job: Install_Terraform:
     steps:
     - bash: |
         curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
         sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
         sudo apt-get update && sudo apt-get install terraform
-  - Terraform_Init:
+  - job: Terraform_Init:
     steps:
     - bash: |
         cd terraform/environments/dev
