--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,8 @@
 # Triggers
 #################################################
 trigger:
-- main
+- none 
+#- main
 
 #################################################
 # Agent Pool
@@ -32,9 +33,9 @@ variables:
 #################################################
 stages:
 
-# Access variable from variable group
-- stage: AccessVariable
-  displayName: Access variable from variable group
+# Install Terraform
+- stage: InstallTerraform
+  displayName: Install Terraform
   jobs:
   - job: Install_Terraform
     steps:
@@ -42,7 +43,9 @@ stages:
         curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
         sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
         sudo apt-get update && sudo apt-get install terraform
+        
   - job: Terraform_Init
+    dependsOn: Install_Terraform
     steps:
     - bash: |
         cd terraform/environments/dev
