--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,9 +52,9 @@ stages:
         ls -lah
         terraform init
         terraform plan    
-      #env:
-      #  ARM_ACCESS_KEY: $(ARM_ACCESS_KEY)
-      #  ARM_CLIENT_ID: $(ARM_CLIENT_ID)
-      #  ARM_CLIENT_SECRET: $(ARM_CLIENT_SECRET)
-      #  ARM_SUBSCRIPTION_ID: $(ARM_SUBSCRIPTION_ID)
-      #  ARM_TENANT_ID: $(ARM_TENANT_ID)
+      env:
+        ARM_ACCESS_KEY: $(ARM_ACCESS_KEY)
+        ARM_CLIENT_ID: $(ARM_CLIENT_ID)
+        ARM_CLIENT_SECRET: $(ARM_CLIENT_SECRET)
+        ARM_SUBSCRIPTION_ID: $(ARM_SUBSCRIPTION_ID)
+        ARM_TENANT_ID: $(ARM_TENANT_ID)
