--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,7 +56,7 @@ stages:
         ARM_TENANT_ID: $(ARM_TENANT_ID)
     dependsOn: install
       
-- stage: dev-init
+- stage: dev_init
   jobs:
   - job: Init
     steps:
@@ -71,7 +71,7 @@ stages:
         ARM_TENANT_ID: $(ARM_TENANT_ID)
     dependsOn: validate
 
-- stage: dev-plan
+- stage: dev_plan
   jobs:
   - job: Plan
     steps:
@@ -84,4 +84,4 @@ stages:
         ARM_CLIENT_SECRET: $(ARM_CLIENT_SECRET)
         ARM_SUBSCRIPTION_ID: $(ARM_SUBSCRIPTION_ID)
         ARM_TENANT_ID: $(ARM_TENANT_ID)
-    dependsOn: dev-init
+    dependsOn: dev_init
