--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,8 +41,10 @@ stages:
       inputs:
         terraformVersion: 'latest'
         
-    - bash: |
-      displayName: "Terraform Validate"
+  - job:
+    displayName: "Terraform Validate"
+    steps:        
+    - bash: |      
         cd terraform/environments/dev/
         terraform validate
       env:
@@ -51,10 +53,11 @@ stages:
         ARM_CLIENT_SECRET: $(ARM_CLIENT_SECRET)
         ARM_SUBSCRIPTION_ID: $(ARM_SUBSCRIPTION_ID)
         ARM_TENANT_ID: $(ARM_TENANT_ID)
-      
-
+  
+  - job:
+    displayName: "Terraform Init"
+    steps: 
     - bash: |
-      displayName: "Terraform Init"
         cd terraform/environments/dev/
         terraform init
       env:
@@ -64,8 +67,10 @@ stages:
         ARM_SUBSCRIPTION_ID: $(ARM_SUBSCRIPTION_ID)
         ARM_TENANT_ID: $(ARM_TENANT_ID)
 
-    - bash: |
-      displayName: "Terraform Plan"
+  - job:
+    displayName: "Terraform Plan"
+    steps: 
+    - bash: |      
         cd terraform/environments/dev/
         terraform plan
       env:
