--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ parameters:
 # Variables
 #################################################
 variables:
-- group: ${{ parameters.TARGET_Variable_Group }}
+- group: ${{ parameters.Environment_Variable_Group }}
 
 #################################################
 # Stages
