Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,21 +38,21 @@ stages:
 #################################################
 - stage: dev
   jobs:
-  - job: 
+  - job: install
     displayName: "Install Terraform"
     steps:
     - task: TerraformInstaller@0
       displayName: "Install Terraform"
       inputs:
         terraformVersion: 'latest'
-
-    - task: TerraformTaskV2@2
-      displayName: "Terraform Init"
-      dependsOn: install
-      inputs:
-        provider: 'azurerm'
-        command: 'init'
-        workingDirectory: '$(System.DefaultWorkingDirectory)/terraform/environments/dev'
+  
+  - job: init
+    displayName: "Terraform Init"
+    dependsOn: install
+    steps:
+    - bash: |
+        cd /terraform/environments/dev
+        terraform init
       env:
         ARM_ACCESS_KEY: $(ARM_ACCESS_KEY)
         ARM_CLIENT_ID: $(ARM_CLIENT_ID)
@@ -60,27 +60,27 @@ stages:
         ARM_SUBSCRIPTION_ID: $(ARM_SUBSCRIPTION_ID)
         ARM_TENANT_ID: $(ARM_TENANT_ID)
 
-    - task: TerraformTaskV2@2
-      displayName: "Terraform Validate"
-      dependsOn: install
-      inputs:
-        provider: 'azurerm'
-        command: 'validate'
-        workingDirectory: '$(System.DefaultWorkingDirectory)/terraform/environments/dev'
+  - job: validate
+    displayName: "Terraform Validate"
+    dependsOn: init
+    steps:
+    - bash: |
+        cd /terraform/environments/dev
+        terraform validate
       env:
         ARM_ACCESS_KEY: $(ARM_ACCESS_KEY)
         ARM_CLIENT_ID: $(ARM_CLIENT_ID)
         ARM_CLIENT_SECRET: $(ARM_CLIENT_SECRET)
         ARM_SUBSCRIPTION_ID: $(ARM_SUBSCRIPTION_ID)
-        ARM_TENANT_ID: $(ARM_TENANT_ID)      
+        ARM_TENANT_ID: $(ARM_TENANT_ID)
 
-    - task: TerraformTaskV2@2
-      displayName: "Terraform Plan"
-      dependsOn: install
-      inputs:
-        provider: 'azurerm'
-        command: 'plan'
-        workingDirectory: '$(System.DefaultWorkingDirectory)/terraform/environments/dev'
+  - job: plan
+    displayName: "Terraform Plan"
+    dependsOn: validate
+    steps:
+    - bash: |
+        cd /terraform/environments/dev
+        terraform plan
       env:
         ARM_ACCESS_KEY: $(ARM_ACCESS_KEY)
         ARM_CLIENT_ID: $(ARM_CLIENT_ID)
